--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@ $("#control").click(function() {
                $("#nugget").val(" ");
                var removeEnter = "enter";
                transcriptsArray.splice($.inArray(removeEnter, transcriptsArray),1);
-               var enterText = transcriptsArray.toString();
-               enterText = enterText.replace(",", " ");
+               var enterText = transcriptsArray.join();
+               enterText = enterText.split(',').join(' ');;
                console.log(enterText);
 
-               $("#nugget").val(transcriptsArray);
+               $("#nugget").val(enterText);
             } 
             //else if (foodornot !== -1){
             //   $("#nugget").val(potentialcommand);
