--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ $("#control").click(function() {
             } 
             // error message
             else {
-              alert("not a valid command");
+              $("#error").show();
             };
           };
           speechRecognizer.onerror = function (event) {
@@ -165,15 +165,18 @@ $("#control").click(function() {
 <input type="button" value="click to use voice command" id="control" ><br>
 <div id = "result"></div>
 
-<span>what would you like to enter?</span><input type="text" id="nugget"><br>
+<span id = "error">This is not a valid command (yet)</span>
+<br>
+<span>what would you like to enter?</span> <br>
+<input type="text" id="nugget"><br>
 
 
 </p>
 
 <p>
 <input type="button" value="cat - click for meow" id = "catbutton"><br>
-<a href="google.com">Google</a><br>
-<a href="cmu.edu">CMU</a><br>
+<br>
+<br>
 
 
 <span id = "text">
@@ -217,6 +220,12 @@ Expenses as material breeding insisted building to in. Continual so distrusts pr
     height : 100px;
     border : 1px solid #ccc;
   }
-  
+  #nugget{
+    height : 50px;
+  }
+  #error{
+    color: red;
+  }
+
 </style>
 </html>
