--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 <script>
 
 
-  
+
 $(document).ready(function() {
 
 var finalTranscripts ='';
 var potentialcommand = '';
+$("#error").hide();
 
 $("#control").click(function() {
 
@@ -174,7 +175,7 @@ $("#control").click(function() {
 </p>
 
 <p>
-<input type="button" value="cat - click for meow" id = "catbutton"><br>
+<input type="button" value="cat - click me for meow" id = "catbutton"><br>
 <br>
 <br>
 
