--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@ var finalTranscripts ='';
 var potentialcommand = '';
 $("#error").hide();
 
+
+$("catbutton").click(function(){
+  alert("meow");
+});
+
+
 $("#control").click(function() {
 
   var r = document.getElementById('result');
@@ -52,6 +58,7 @@ $("#control").click(function() {
             var upornot = jQuery.inArray("up", transcriptsArray);
             var downornot = jQuery.inArray("down", transcriptsArray);
             var enterornot = jQuery.inArray("enter", transcriptsArray);
+            var clickornot = jQuery.inArray("click", transcriptsArray);
             
             console.log(transcriptsArray);
 
@@ -83,6 +90,10 @@ $("#control").click(function() {
 
                $("#nugget").val(enterText);
             } 
+            //click cat button
+            else if (clickornot !== -1){
+              alert("meow");
+            }
             // error message
             else {
               $("#error").show();
@@ -169,7 +180,7 @@ $("#control").click(function() {
 <input type="button" value="click to use voice command" id="control" ><br>
 <div id = "result"></div>
 
-<span id = "error">This is not a valid command (yet)</span>
+<span id = "error">This is not a valid command :c</span>
 <br>
 <span>what would you like to enter?</span> <br>
 <input type="text" id="nugget"><br>
